# zroj_core

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  compose-dev.yaml  tarpaulin.toml
cli/: Cargo.toml  README.md
contest/: Cargo.toml
crates/judger/: Cargo.toml
crates/judger/src/: cache.rs  env.rs  error.rs  lang.rs  lib.rs  one_off.rs  report.rs  store_file.rs  truncstr.rs
crates/judger/tests/: one_off_gnu.rs
crates/problem/: Cargo.toml
crates/problem/src/: checker.rs  checker_c_abi.c  checker_c_abi.h  data.rs  judger_framework.rs  lib.rs  render_data.rs  sample.rs
crates/problem/src/prelude/: mod.rs  traditional.rs
crates/problem/tests/: checker.rs  quine_checker.rs
crates/sandbox_bin/: Cargo.toml
crates/sandbox_bin/src/: config.rs  lib.rs  main.rs
crates/serde_ts_typing/: Cargo.toml
crates/serde_ts_typing/src/: basic_impl.rs  lib.rs  value.rs
crates/serde_ts_typing_derive/: Cargo.toml
crates/serde_ts_typing_derive/src/: lib.rs  serde_attr.rs
crates/serde_ts_typing_derive/tests/: enum.rs  generic.rs  struct.rs
crates/server/: Cargo.toml  README.md  build.rs
crates/server/examples/: job_runner.rs  one_off.rs  problem_judger.rs
crates/server/src/: lib.rs  server_app.rs  utils.rs
crates/server/src/data/: contest.rs  error.rs  gravatar.rs  mod.rs  permission.rs  problem_statement.rs  submission.rs  user.rs
crates/server/src/data/databases/: contest.rs  mod.rs  problem_ojdata.rs  problem_statement.rs  submission.rs  user.rs
crates/server/src/data/file_system/: mod.rs  schema.rs
crates/server/src/data/mysql/: mod.rs  schema.rs  schema_model.rs
crates/server/src/data/mysql/db_setup/02_problems/: down.sql  up.sql
crates/server/src/data/mysql/db_setup/03_submissions/: down.sql  up.sql
crates/server/src/data/mysql/db_setup/04_contests/: down.sql  up.sql
crates/server/src/data/types/: cast.rs  datetime.rs  email.rs  full_judge_report.rs  gender.rs  json_str.rs  mod.rs  subm_raw.rs  username.rs
crates/server/src/manager/: job_runner.rs  mod.rs  one_off.rs  problem_judger.rs
crates/server/src/web/: auth.rs  gravatar.rs  mod.rs  nuxt.rs  req_record.rs  rev_proxy.rs
crates/server/src/web/auth/: injector.rs  mod.rs  session.rs
crates/server/src/web/rev_proxy/: mod.rs
crates/server/src/web/services/: api_docs.rs  auth.rs  contest.rs  mod.rs  one_off.rs  problem.rs  submission.rs  user.rs
crates/server/tests/: mysql-inspect.rs  test_db.rs
crates/server_derive/: Cargo.toml  README.md
crates/server_derive/src/: lib.rs
crates/server_derive/tests/: actix_web.rs
crates/store_derive/: Cargo.toml
crates/store_derive/src/: lib.rs
crates/store_derive/tests/: test_macros.rs
judger/: Cargo.toml
judger/src/: basic.rs  cache.rs  env.rs  error.rs  lang.rs  lib.rs  one_off.rs  report.rs  result.rs  store_file.rs  truncstr.rs
judger/tests/: one_off_gnu.rs  test_cache.rs
macros/: Cargo.toml
md/: Cargo.toml
md/src/: ast.rs  lib.rs
migrator/: Cargo.toml
migrator/src/: lib.rs  uoj.rs  uoj_config.pest  zroj.rs
migrator/tests/: test_uoj.rs
passwd/: Cargo.toml
passwd/src/: lib.rs
problem/: Cargo.toml
problem/src/: Statement.rs  accumulate_rule.rs  builtin.rs  checker.rs  config.rs  data.rs  database.rs  error.rs  judger_framework.rs  lib.rs  meta.rs  prob_judger.rs  problem.rs  problem_detail.rs  problem_set.rs  problem_type.rs  render_data.rs  sample.rs  statement.rs  target_oj_type.rs  task.rs  utils.rs
problem/src/prelude/: mod.rs  traditional.rs
problem/src/problem/: traditional.rs
sandbox/: Cargo.toml  build.rs  gmon.out  windows_test.cpp
sandbox/src/: error.rs  lib.rs  singleton.rs
sandbox/src/unix/: mod.rs  share.h  share_mem.rs  signal_safe.rs  sigutils.h  singleton.rs  sio.h  utils.c
sandbox/src/windows/: mod.rs
sandbox/tests/: cat_stdio.rs  gcc.rs  macro.rs  macros.rs  test_macros.rs
sandbox/tests/asserts/: stress.cpp
server/: Cargo.toml  README.md  build.rs  diesel.toml
server/db_setup/05_problem_statements/: down.sql
server/diesel/2023-09-09-102838_users/: up.sql
server/diesel/2023-09-09-102908_problem_statements/: up.sql
server/diesel/2023-09-09-102908_problems/: up.sql
server/diesel/2023-09-09-102949_submission_metas/: down.sql  up.sql
server/diesel/2023-09-09-102949_submissions/: down.sql  up.sql
server/diesel/2023-09-10-142224_submission_details/: up.sql
server/diesel/2023-09-10-150004_problem_statements/: up.sql
server/src/: admin.rs  api.rs  app.rs  auth.rs  config.rs  data.rs  database.rs  dev.rs  lib.rs  main.rs  manager.rs  problem.rs  schema.rs  server_app.rs  user.rs  utils.rs
server/src/app/: auth.rs  custom_test.rs  group.rs  mod.rs  one_off.rs  problem.rs  submission.rs  user.rs
server/src/auth/: injector.rs  middleware.rs  mod.rs  tests.rs
server/src/config/: app.rs  core.rs  mod.rs
server/src/data/: error.rs  fs_store.rs  gravatar.rs  group.rs  mod.rs  mysql.rs  problem_config.rs  problem_data.rs  problem_display.rs  problem_ojdata.rs  problem_statement.rs  schema.rs  submission.rs  user.rs  userdata.rs
server/src/data/file_system/: mod.rs  schema.rs
server/src/data/mysql/: create_tables.sql  create_user.sql  drop_tables.sql  mod.rs  schema.rs  schema_model.rs
server/src/data/mysql/db_setup/02_problems/: up.sql
server/src/data/types/: cast.rs  datetime.rs  email.rs  full_judge_report.rs  gender.rs  json_str.rs  mod.rs  subm_raw.rs  username.rs
server/src/data/user/: database.rs  default.rs  mod.rs
server/src/manager/: _problem.rs  custom_test.rs  job_runner.rs  judge_queue.rs  mod.rs  one_off.rs  problem.rs  problem_judger.rs
server/src/rev_proxy/: handler.rs  mod.rs
server/src/service/: mod.rs
server/src/static/: index.html  login.html  user_index.html
server/src/web/rev_proxy/: handler.rs
server/src/web/services/: auth.rs  mod.rs  one_off.rs  user.rs
server/tests/: test_db.rs
store/: Cargo.toml
store/src/: error.rs  lib.rs
store_derive/: Cargo.toml
store_derive/src/: lib.rs
store_derive/tests/: test_builtin.rs  test_macros.rs
tools/: Cargo.toml
tools/src/: lib.rs  main.rs
web/: README.md  (+8 more)
(+146 files in other folders)
