[workspace]

# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "contest",
    "judger",
    "passwd",
    "problem",
    "sandbox", 
    "server",
    "server_derive",
    "store",
    "store_derive",
    "serde_ts_typing",
    "serde_ts_typing_derive",
    "md",
    "cli"
, "structural_macro_utils"]

[workspace.package]
authors = ["ZROJ Team"]
edition = "2021"
keywords = ["online_judge", "sandbox"]
version = "0.1.0"
repository = "https://github.com/iruioj/zroj_core"
