[workspace]

# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = ["crates/*"]

[workspace.package]
authors = ["ZROJ Team"]
edition = "2021"
keywords = ["online_judge", "sandbox"]
version = "0.1.0"
repository = "https://github.com/iruioj/zroj_core"

[profile.release]
opt-level = 3
codegen-units = 1