[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
test = false
bench = false

[dependencies]
tempfile = "3.3.0"

actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
actix-cors = "0.6.4"

server = { path="../server" }
env_logger = "0.10.0"