[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
test = false
bench = false

[dependencies]
server = { path="../server" }
passwd = { path="../passwd" }

tempfile = "3.3.0"
actix-web = { version = "4", features = ["openssl"] }
actix-cors = "0.6.4"
env_logger = "0.10.0"