[package]
name = "bin"
version.workspace = true
edition.workspace = true
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sandbox = { path = "../sandbox" }
migrator = { path = "../migrator" }
server = { path = "../server" }
store = { path = "../store" }

clap = { version = "4.3", features = ["derive"] }
serde_json = "1.0"
shadow-rs = "0.26.1"
tokio = { version = "1.31.0", features = ["full"] }
diesel = { version = "2.1.0", features = ["mysql"] }
anyhow = "1.0.79"

[build-dependencies]
shadow-rs = "0.26.1"
