[package]
name = "judger"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sandbox = { path = "../sandbox" }
problem = { path = "../problem" }
tempfile = "3.5.0"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
sha2 = { version = "0.10", default-features = false }
zip = "0.6.4"
regex = "1.8.1"
