[package]
name = "judger"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sandbox = { path = "../sandbox" }
serde_ts_typing = { path = "../serde_ts_typing" }
store = { path = "../store" }

tempfile = "3.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", default-features = false }
zip = "0.6.4"
regex = "1.8.1"
