[package]
name = "judger"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sandbox = { path = "../sandbox" }
serde_ts_typing = { path = "../serde_ts_typing" }
store = { path = "../store" }

tempfile = "3.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", default-features = false }
thiserror = "1.0"
anyhow = "1.0"