[package]
name = "md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_ts_typing = { path = "../serde_ts_typing" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# to update to latest commit, run `cargo update`
markdown = { git = "https://github.com/sshwy/markdown-rs.git", branch = "fix_serde", features = ["serde"]}
# markdown = { path = "/home/sshwy/Desktop/markdown-rs", features = ["serde"] }