[package]
name = "migrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
problem = { path = "../problem" }
store = { path = "../store" }
server = { path = "../server" }
md = { path = "../md" }

diesel = { version = "2.1.0", features = ["mysql"] }
csv = "1.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pest = "2"
pest_derive = "2"