[package]
name = "passwd"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "package for encrypting passwords"
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2 = { version = "0.10" }
base64 = "0.21.0"
argon2 = { version = "0.5.0" }
rand_core = { version = "0.6.3", features = ["getrandom"] }
getrandom = { version = "0.2" }
wasm-bindgen = { version = "0.2", optional = true }
md-5 = "0.10.5"
hex = "0.4"

[features]
# 密码哈希的前端 WASM 生成（开发时用）
# https://docs.rs/getrandom/latest/getrandom/#webassembly-support
wasm = ["wasm-bindgen", "getrandom/js"]