[package]
name = "problem"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
queues = "1.0.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", default-features = false }
zip = "0.6.4"
tempfile = "3.3.0"
