[package]
name = "problem"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
judger = { path = "../judger" }
store = { path = "../store" }
md = { path = "../md" }

serde_ts_typing = { path = "../serde_ts_typing" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# zip = "0.6.4"
tempfile = "3.3.0"
lazy-regex = "3.0.0"
thiserror = "1.0"