[package]
name = "sandbox"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_ts_typing = { path = "../serde_ts_typing" }
nix = "0.26.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3.0"
sandbox_macro = { path = "../sandbox_macro" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["jobapi2","processthreadsapi","handleapi","memoryapi","synchapi","psapi"] }
windows = { version = "0.22.1", features = ["System", "System_Diagnostics"] }
