[package]
name = "server"
version.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
judger = { path = "../judger" }
sandbox = { path = "../sandbox" }
actix-web = "4"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-multipart = { version = "0.6.0" }
actix-rt = "2.8.0"
crossbeam-channel = "0.5.8"
serde_derive = "1.0.154"
serde = "1.0.154"
email_address = "0.2.4"
serde_json = "1.0.94"
diesel = { version = "2.0.3", features = ["r2d2"] }
r2d2 = { version = "0.8.9", optional = true }
r2d2-diesel = { version = "1.0.0", optional = true }
async-trait = "0.1.68"
[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[features]
mysql = ["diesel/mysql", "dep:r2d2", "dep:r2d2-diesel"]
