[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
judger = { path = "../judger" }
passwd = { path = "../passwd" }
problem = { path = "../problem" }
store = { path = "../store" }
server_derive = { path = "../server_derive" }
serde_ts_typing = { path = "../serde_ts_typing" }

actix-web = "4"
actix-http = "3.3"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-multipart = { version = "0.6" }
actix-rt = "2.8"
actix-cors = "0.6"
awc = "3.1"

async-trait = "0.1"
crossbeam-channel = "0.5.8"
email_address = "0.2.4"
env_logger = "0.10.0"
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.3.0"

diesel = { version = "2.1.0", features = ["r2d2"], optional = true }
r2d2 = { version = "0.8.9", optional = true }
r2d2-diesel = { version = "1.0.0", optional = true }
lazy_static = "1.4.0"
regex = "1.9.1"
md-5 = "0.10.5"
actix-files = "0.6.2"
hex = "0.4"
zip = "0.6.4"
thiserror = "1.0"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[features]
mysql = ["diesel", "diesel/mysql", "r2d2", "r2d2-diesel"]
