[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
# r2d2-diesel = { version = "1.0.0" }
# regex = "1.9.1"
actix-cors = "0.6"
actix-files = "0.6.2"
actix-http = "3.3"
actix-multipart = { version = "0.6" }
actix-rt = "2.8"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web = "4"
async-trait = "0.1"
awc = "3.1"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5.8"
diesel = { version = "2.1.0", features = ["r2d2", "mysql"] }
email_address = "0.2.4"
env_logger = "0.10.0"
futures = "0.3"
judger = { path = "../judger" }
lazy_static = "1.4.0"
passwd = { path = "../passwd" }
problem = { path = "../problem" }
r2d2 = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ts_typing = { path = "../serde_ts_typing" }
serde_with = "3.3"
server_derive = { path = "../server_derive" }
store = { path = "../store" }
tempfile = "3.3"
thiserror = "1.0"
tracing = "0.1.37"
tracing-actix-web = "0.7"
tracing-subscriber = "0.3"
zip = "0.6.4"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[features]
# mysql = ["diesel", "diesel/mysql", "r2d2", "r2d2-diesel"]
