[package]
name = "store_derive"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["parsing", "full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.56"

[dev-dependencies]
store = { path = "../store" }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.3.0"

[lib]
proc-macro = true
