[package]
name = "tools"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
colored = "2.0.0"
inquire = "0.6.1"
semver = "1.0.16"
toml = "0.8.4"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.15.1" }

