[package]
name = "tools"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
colored = "2.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.16.0" }

