[package]
name = "problem"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
judger = { path = "../judger" }
store = { path = "../store" }
md = { path = "../md" }

serde_ts_typing = { path = "../serde_ts_typing" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3"
thiserror = "1.0"
anyhow = "1.0"