[package]
name = "zroj-sandbox"
description = "Sandbox for ZROJ Judge System"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sandbox = { path = "../sandbox", features = ["exec_sandbox"] }
shadow-rs = "0.28.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
shadow-rs = "0.28.0"