[package]
name = "serde_ts_typing"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_ts_typing_derive = { path = "../serde_ts_typing_derive" }
askama = "0.12.1"

[dev-dependencies]
serde_json = "1.0"