[package]
name = "serde_ts_typing"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_ts_typing_derive = { path = "../serde_ts_typing_derive" }
askama = { version = "0.12.1", default-features = false }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3"
serde_urlencoded = "0.7" # for testing
serde_with = "3.3.0"