[package]
name = "serde_ts_typing_derive"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structural_macro_utils = { path = "../structural_macro_utils" }
syn = { version = "2.0", features = ["parsing", "full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
serde_ts_typing = { path = "../serde_ts_typing" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3"
serde_urlencoded = "0.7" # for testing
serde_with = "3.3.0"

[lib]
proc-macro = true
