[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
actix-cors = "0.7"
actix-files = "0.6.2"
actix-http = "3.6"
actix-multipart = { version = "0.6" }
actix-rt = "2.9"
actix-web = "4"
anyhow = "1.0"
askama = "0.12.1"
async-trait = "0.1"
awc = { version = "3.4", features = ["rustls-0_22-webpki-roots"] }
rustls = "0.22"
webpki-roots = "0.26"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5.8"
diesel = { version = "2.1.0", features = ["r2d2", "mysql"] }
diesel_migrations = "2.1.0"
email_address = "0.2.4"
futures = "0.3"
judger = { path = "../judger" }
lazy_static = "1.4.0"
passwd = { path = "../passwd" }
problem = { path = "../problem" }
r2d2 = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ts_typing = { path = "../serde_ts_typing" }
serde_with = "3.3"
server_derive = { path = "../server_derive" }
store = { path = "../store" }
tempfile = "3.3"
thiserror = "1.0"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["json"] }
zip = "0.6.4"


actix-session = { version = "0.9", features = [
    "cookie-session",
], optional = true }

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[features]
# mysql = ["diesel", "diesel/mysql", "r2d2", "r2d2-diesel"]
session_auth = ["actix-session"]
