[package]
name = "server_derive"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
structural_macro_utils = { path = "../structural_macro_utils" }
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["parsing", "full", "extra-traits"] }
quote = "1.0"
convert_case = "0.4.0"

[dev-dependencies]
actix-web = "4"
